kubernetes/utilities/epicgames-freegames/epicgames-freegames.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epicgames-freegames
  namespace: utilities
  labels:
    app.kubernetes.io/name: epicgames-freegames
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 24h"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: epicgames-freegames
  template:
    metadata:
      labels:
        app.kubernetes.io/name: epicgames-freegames
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        kubernetes.io/hostname: yumi
      containers:
        - name: epicgames-freegames
          image: ghcr.io/claabs/epicgames-freegames-node:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "2048Mi"
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          volumeMounts:
            - name: config-volume
              mountPath: /usr/app/config/config.json
              subPath: config.json
            - name: data-volume
              mountPath: /usr/app/config

      volumes:
        - name: config-volume
          configMap:
            name: epicgames-freegames-config
        - name: data-volume
          emptyDir:
            sizeLimit: 250Mi
